# stark-verifier

./: .gitignore  Cargo.toml  verify.sh
samples/: Cargo.toml
samples/src/: main.rs
semaphore_aggregation/: Cargo.toml
semaphore_aggregation/src/: lib.rs
semaphore_aggregation/src/plonky2_semaphore/: access_set.rs  recursion.rs
semaphore_aggregation/src/snark/: config.rs  mod.rs  verifier_api.rs  verifier_circuit.rs
semaphore_aggregation/src/snark/chip/: bn254_hasher_chip.rs  bn254_merkle_proof_chip.rs  bn254_transcript_chip.rs  fri_chip.rs  goldilocks_chip.rs  goldilocks_extension_algebra_chip.rs  goldilocks_extension_chip.rs  goldilocks_hasher_chip.rs  hasher_chip.rs  merkle_proof_chip.rs  mod.rs  transcript_chip.rs  vector_chip.rs
semaphore_aggregation/src/snark/chip/plonk/: plonk_verifier_chip.rs  vanishing_poly.rs
semaphore_aggregation/src/snark/chip/plonk/gates/: mod.rs
semaphore_aggregation/src/snark/types/: assigned.rs  mod.rs  proof.rs  verification_key.rs
