[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
plonky2 = { git = "https://github.com/DoHoonKim8/plonky2" }
semaphore_aggregation = { path = "../semaphore_aggregation" }

[features]
not-constrain-range-check = ["semaphore_aggregation/not-constrain-range-check"]
